# NN-library-from-scratch

./: NN.py  README.md  pyproject.toml  test_xor.py
docs/: manual.md
src/Axiom/linear/: linear_regression.py  logisitc_regression.py
src/Axiom/neural/: engine.py
src/Axiom/preprocessing/: scalers.py
tests/: test_xor.py
